--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,7 @@
 </p>
   <% end %>
 </p>
-<%= cl_image_tag("https://res.cloudinary.com/sassia93/image/upload/v1622803179/zqchrd7t9oyxlqetnvyf.jpg",
+<%= cl_image_tag("https://res.cloudinary.com/sassia93/image/upload/v1622812141/1920px-Drama-icon.svg_kyejub.png",
       width: 400, height: 300, crop: :fill) %>
 
 <%= link_to "Create a new list", new_list_path  %>
