--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,27 @@
-<h1><%= @list.name %></h1>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill %>')">
+  <h1><%= @list.name %></h1>
+</div>
 
 <% @list.bookmarks.each do |l| %>
-<%= l.movie.title %>--- <%= l.comment %> <%= link_to "Delete", bookmark_path(l.id), method: :delete, data: {confirm: "are you sure"}  %>
+
+<div class="card-product">
+    <img src="<%= cl_image_path l.movie.poster_url, height: 300, crop: :fill %>"/>
+    <div class="card-product-infos">
+        <%= l.movie.title %>
+        </br>
+        <strong>Rating:</strong> <%= l.movie.rating %>
+        </br>
+        <strong>Overview: </strong><%= l.movie.overview %>
+        </br>
+       <strong>Your comment: </strong> <%= l.comment %> <%= link_to "Delete", bookmark_path(l.id), method: :delete, data: {confirm: "are you sure"}  %>
+
+    </div>
+</div>
+
+
+
 </br>
+
 <% end %>
 
 <%= link_to "Add a new bookmark", new_list_bookmark_path(@list) %>
